# libquantum

./: .gitignore  Makefile.am  configure.ac
src/: error.h  linear.c  linear.h
src/ela/: ela_complex.h  ela_macros.h  templates_on.h
src/ela/block/: block.c  block_source.h  ela_block.h  ela_block_complex_double.h  ela_block_double.h  init.c  test_block.c  test_block_source.h
src/ela/err/: ela_error.h  error.c
src/ela/test/: ela_test.h
src/ela/vector/: ela_vector.h  ela_vector_complex_double.h  ela_vector_double.h  init.c  test_vector.c
test/: test_NP_CHECK.c  test_scalar_types_complex.c  test_scalar_types_real.c
